--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <!-- Seekho Bharat section -->
     <section class="seekho_bharat" id="seekho_bharat">
       <div class="container">
-        <h1 class="mb-4">Seekho Bharat</h1>
+        <h1 class="mb-4 productHeading">Seekho Bharat</h1>
         <p>
           Seekho Bharat is an online learning platform that will work towards
           the mission of providing affordable education to all individuals in
@@ -347,7 +347,7 @@
     <!-- Daksh section -->
     <section class="daksh" id="daksh">
       <div class="container">
-        <h1 class="mb-4">Daksh</h1>
+        <h1 class="mb-4 productHeading">Daksh</h1>
         <p>
           Pursueed has developed a strong analytical test tool (DAKSH) combining
           various Physiological, aptitudes and Dermatoglyphics Multiple
@@ -483,7 +483,7 @@
     <!-- Track the Test section -->
     <section class="ttt" id="ttt">
       <div class="container">
-        <h1 class="mb-4">Track The Test</h1>
+        <h1 class="mb-4 productHeading">Track The Test</h1>
         <p>
           Track the Test is a strong Analytical Test Tool developed by combining
           unique data capturing and mining based on Artificial Intelligence,
@@ -589,7 +589,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <h1 class="mb-4">Skilling Recognition</h1>
+            <h1 class="mb-4 productHeading">Skilling Recognition</h1>
             <p>
               Skills development is globally considered as key for productive
               employment. Hence it is an important means for increased
@@ -692,7 +692,7 @@
             <h6 class="mt-3 ms-3">PursueED Solutions Pvt Ltd</h6>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div>
+            <div class="ps-3 ps-lg-0">
               <h5>Services</h5>
               <a href="#seekho_bharat" class="service_links"> Seekho Bharat</a>
               <a href="#daksh" class="service_links"> Daksh</a>
@@ -701,7 +701,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
-            <div>
+            <div class="ps-3 ps-lg-0">
               <h5>Contact Us</h5>
               <a href="mailto:#" class="contact_links"
                 ><span class="material-symbols-outlined me-2"> mail </span>
